# upakarana

./: .gitignore  Makefile  README.md  ai.py  build.py  emoji.py  main.py  pyproject.toml  stacking.py
.github/workflows/: build.yml
app/: __init__.py  config.py  events.py  launcher.py
app/custom_widgets/: line_edit.py
app/models/: abstract_list_model.py  commands.py
app/plugins/clipboard/: __init__.py  commands.py  content.py  model.py  service.py
app/plugins/clipboard/content/: clipboard.py
app/plugins/clipboard/models/: clipboard.py
app/plugins/emoji/: __init__.py  commands.py
app/plugins/emoji/content/: emoji.py  emojis.json
app/plugins/internal/: __init__.py  commands.py
app/plugins/internal/content/: about.py
app/views/: list_view.py
playground/: clipboard.py
scripts/: gen_styles.py
upakarana/: __init__.py  config.py  fonts.py  hotkeys.py  launcher.py  paths.py  platform.py  settings.py  utils.py  worker.py
upakarana/custom_widgets/: line_edit.py
upakarana/models/: commands.py
upakarana/plugins/clipboard/: __init__.py  commands.py  content.py  model.py  service.py
upakarana/plugins/emoji/: __init__.py  commands.py
upakarana/plugins/emoji/scripts/: gen_emoji.py
upakarana/plugins/github/: __init__.py  commands.py  content.py  model.py
upakarana/plugins/internal/: __init__.py  commands.py
upakarana/plugins/internal/content/: about.py
upakarana/styles/scss/: main.scss
upakarana/views/: list_view.py
