[tool.poetry]
name = "upakarana"
version = "0.0.0"
description = ""
authors = ["jd-solanki <jdsolanki0001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.6.0"
pyqt5-stubs = "^5.15.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
